- cpan_testers:
  o check & report where genhdlist2 is
  o check that web server has actually started
  o describe more tests to help pinpoint regressions
  o do not fail test when libnss.so is not found in Debian 9 or FreeBSD
  o fix test with rpm < 4.13 on CentOS7
  o perform some file conflict tests only on Mageia
  o try harder to find genhdlist2 in uninstalled CPAN modules
  o work without glibc-static-devel
- testsuite:
  o add more extensive tests
  o describe it more
  o disable fsync/fdatasync while running tests

Version 8.121 - 8 April 2020

- urpmi:
  o add support for --reinstall
- urpmq:
  o display epoch when using -i (mga#25735)
- library:
  o add dummy urpmi.pm package for CPAN & proper indexation (RT#127881)
- cpan_testers:
  o actually needs perl >= 5.10 for //= operator
  o fix a test with rpm < 4.13.0
  o fix building rpms on FreeBSD
  o fix failing scriptlets test with rpm < 4.13.0
  o fix looking for non existing libnss.so on FreeBSD
  o fix testsuite errors on CentOs (NVR vs NVRA)
  o include /usr/local/bin in PATH
  o require a newer enough Test::More & rpmtools
  o skip mirrorlist tests on !Mageia
  o skip tests if we have no supported downloader
  o skip weak deps test on CentOS 7 (unsupported)
  o testsuite needs rpmtools
  o workaround disabled nobody account (eg on CentOS7)
  o workaround 'nogroup' not existing on CentOS

Version 8.120 - 21 October 2019

- fix test for whether any 32-bit packages are installed

Version 8.119 - 19 October 2019

- when adding distrib media, enable 32-bit media if needed (mga#24438)
- translations updates

Version 8.118 - 22 June 2019

- ensure downloaded files are world-readable (mga#24636)

Version 8.117 - 21 June 2019

- ensure urpmi config and cache files are world-readable (mga#24636)

Version 8.116 - 27 May 2019

- don't enable 32-bit media by default on 64-bit systems (mga#24376)
  o except on systems with 32-bit EFI, where we need the Core 32bit
    media for the bootloader
